# Local-LLM-Bench

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ELECTRON_SETUP.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  PRODUCTION_STATUS.md  README.md  TESTING.md  TESTING_GUIDE.md  USAGE.md  WINDOWS_APP.md  build-windows-app.ps1  launch-app.bat  package-lock.json  package.json  requirements.txt  setup.py
.github/workflows/: build-windows-app.yml  ci.yml  test.yml
docs/: GETTING_STARTED.md
public/: bench.js  index.html  inference.js  main.js  metrics.js  ollama.js  openai-compat.js  preload.js  providers.js  registries.js  results-store.js
src/: App.css  App.js  __init__.py  animations.rs  benchmark.rs  cli.rs  datasets.rs  index.css  inference.rs  llm_bench.py  main.rs  metrics.rs  models.rs  registry.rs  results.rs  stats.rs  tokenizer.rs  ui.rs
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: index.html
src/components/: ConfirmDelete.js  Dashboard.js  Downloads.js  Layout.js  LiveRun.js  ModelDetail.js  ModelTuner.js  Registry.js  Results.js  RunReport.js  Settings.js  Setup.js  navItems.js
src/data/: adapt.js  catalog.js  knownModels.js  results.js  runs.js
tests/: integration_tests.rs  test_llm_bench.py
