[package]
name = "local-llm-bench"
version = "0.1.0"
edition = "2021"
authors = ["Priyansh <pgupta@zaradigitalsolutions.it>"]
description = "A comprehensive benchmarking framework for evaluating local LLM models"
repository = "https://github.com/priyansh19/Local-LLM-Bench"
license = "MIT"

[[bin]]
name = "llm-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
chrono = "0.4"
csv = "1.3"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
