[package]
name = "local-llm-bench"
version = "0.1.0"
edition = "2021"
authors = ["Priyansh <pgupta@zaradigitalsolutions.it>"]
description = "A comprehensive benchmarking framework for evaluating local LLM models"
repository = "https://github.com/priyansh19/Local-LLM-Bench"
license = "MIT"

[[bin]]
name = "llm-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"

[dev-dependencies]
