[package]
name = "local-llm-bench"
version = "0.1.0"
edition = "2021"
authors = ["Priyansh <pgupta@zaradigitalsolutions.it>"]
description = "A comprehensive benchmarking framework for evaluating local LLM models"
repository = "https://github.com/priyansh19/Local-LLM-Bench"
license = "MIT"

[[bin]]
name = "llm-bench"
path = "src/main.rs"

[dependencies]
# CLI & Serialization
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"

# Model Loading & Registry
hf-hub = "0.3"
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
dirs = "5.0"
indicatif = "0.17"

# Inference & Tokenization
tokenizers = "0.13"

# Benchmarking & Metrics
rayon = "1.7"
statrs = "0.16"
sysinfo = "0.30"

# TUI & Animation
ratatui = "0.27"
crossterm = "0.27"
unicode-width = "0.1"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
